# hello-os

./: .gdbinit  .gitignore  Cargo.toml  Makefile  README.md  build.rs  flake.nix  grub-prebuilt.iso  make_iso.sh  make_kernel.sh  qemu.sh
.cargo/: config.toml
boot/: grub.cfg  grub.stub.cfg
src/: boot.asm  console.rs  cpu.rs  error.rs  linker.ld  main.rs  serial.rs  x86_64-unknown-none.json
src/console/: serial.rs  vga.rs
src/gdt/: mod.rs  types.rs
src/interrupt/: exception.rs  idt.rs  ioapic.rs  lapic.rs  mod.rs  mps.rs  x86_xapic.rs
src/mem/: multiboot2.rs
src/memory/: mod.rs  mutex.rs  page_allocator.rs
