[package]
name = "hello-os"
version = "0.1.0"
authors = ["Anton Burtsev <aburtsev@uci.edu>"]
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
x86 = "0.52.0"
spin = "0.10.0"
volatile = "0.3.0"
bitfield = "0.13.2"
bit_field = "0.10.1"
bitfield-struct = "0.6"

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[build-dependencies]
nasm-rs = "0.3.0"
