[package]
name = "hello-os"
version = "0.1.0"
authors = ["yramanna"]
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
x86 = "0.52.0"
spin = "0.9.8"
volatile = "0.3.0"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[build-dependencies]
nasm-rs = "0.2.0"