[package]
name = "hello-os"
version = "0.1.0"
authors = ["yramanna"]
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
x86 = "0.52.0"
spin = "0.9.8"
volatile = "0.3.0"
bitfield = "0.13.2"
bit_field = "0.10.1"
bitfield-struct = "0.6"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[build-dependencies]
nasm-rs = "0.2.0"

[dependencies.x86_64]
version = "0.15"
default-features = false